<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullscreenActivity">

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        app:layout_widthPercent="50%">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/screenPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/screenIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="7dp"
                android:padding="10dip" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="-25dp"
            android:alpha="0.6"
            android:contentDescription="@string/desc_shadow_cover"
            android:scaleType="fitXY"
            android:src="@drawable/shadow_cover" />

        <ImageView
            android:id="@+id/imgHorizonCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:contentDescription="@string/desc_horizonBorder"
            android:scaleType="fitXY"
            android:src="@drawable/cover" />
    </FrameLayout>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/controlPanel"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:layout_heightPercent="50%"
        app:layout_widthPercent="50%">

        <ImageView
            android:id="@+id/imgPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_imgPanel"
            android:scaleType="centerCrop"
            android:src="@drawable/panel_640x342" />

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout_panel_battery_hdg"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_heightPercent="34%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="32%">

            <TextView
                android:id="@+id/textBattery"
                style="@style/ControlPanelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/label_battery"
                app:layout_marginTopPercent="2%" />

            <TextView
                android:id="@+id/batteryStatus"
                style="@style/ControlPanelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textBattery"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/not_available"
                app:layout_marginTopPercent="1%" />

            <TextView
                android:id="@+id/textHDG"
                style="@style/ControlPanelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/label_compass"
                app:layout_marginBottomPercent="8%"
                app:layout_marginLeftPercent="4%" />


            <TextView
                android:id="@+id/hdgValue"
                style="@style/ControlPanelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/textHDG"
                android:layout_toEndOf="@id/textHDG"
                android:text="@string/not_available"
                app:layout_marginLeftPercent="12%" />


        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout_panel_throttle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            app:layout_heightPercent="57%"
            app:layout_marginBottomPercent="5%"
            app:layout_widthPercent="33%">

            <ImageView
                android:id="@+id/imgThrottleNeedle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_throttleNeedle"
                android:rotation="-140"
                android:src="@drawable/needle_right_circle_up" />

            <TextView
                android:id="@+id/throttleValue"
                style="@style/ControlPanelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/zero_percent"
                app:layout_marginBottomPercent="11%"
                app:layout_marginRightPercent="18%" />
        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout_panel_fuel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:layout_heightPercent="61%"
            app:layout_marginBottomPercent="5%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="34%">

            <TextView
                android:id="@+id/textFuel"
                style="@style/ControlPanelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/label_fuel"
                app:layout_marginTopPercent="2%" />

            <ImageView
                android:id="@+id/imgFuelNeedle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_fuelNeedle"
                android:rotation="-90"
                android:src="@drawable/needle_right_circle_up" />

            <TextView
                android:id="@+id/batteryLevelText"
                style="@style/ControlPanelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/not_available"
                app:layout_marginBottomPercent="16%" />

        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout_panel_signal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:layout_heightPercent="40%"
            app:layout_marginBottomPercent="5%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="34%">


            <TextView
                android:id="@+id/textSignal"
                style="@style/ControlPanelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_signal"
                app:layout_marginLeftPercent="10%"
                app:layout_marginTopPercent="5%" />

            <TextView
                android:id="@+id/signalValue"
                style="@style/ControlPanelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/minus_infinity"
                app:layout_marginLeftPercent="26%" />

            <TextView
                android:id="@+id/textDBM"
                style="@style/ControlPanelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/signalValue"
                android:layout_below="@id/signalValue"
                android:text="@string/label_signalStrength"
                android:textStyle="normal"
                app:layout_marginTopPercent="7%" />


            <ImageView
                android:id="@+id/imgSignalNeedle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_signalNeedle"
                android:rotation="0"
                android:src="@drawable/needle_right_circle_up"
                app:layout_marginTopPercent="6%" />

        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout_panel_cursor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_marginBottomPercent="5%"
            app:layout_marginLeftPercent="46%"
            app:layout_marginRightPercent="40%"
            app:layout_marginTopPercent="2%">

            <ImageView
                android:id="@+id/lockThrottle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_throttleLock"
                android:scaleType="fitXY"
                android:src="@drawable/throttle_locked"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/throttleCursor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/desc_throttleSlider"
                android:longClickable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/throttle_slider" />
        </android.support.percent.PercentRelativeLayout>
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>
